Adding kickstarter link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <section class="page-header">
       <h1 class="project-name">Galen IDE</h1>
       <h2 class="project-tagline">IDE integration for the Galenframework</h2>
+      <a href="https://www.kickstarter.com/projects/1453417775/plugins-for-intellij-and-eclipse-for-galen-layout" class="btn">Vote on Kickstarter</a>
       <a href="https://github.com/hypery2k/galen_ide" class="btn">View on GitHub</a>
       <a href="https://github.com/hypery2k/galen_ide/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/hypery2k/galen_ide/tarball/master" class="btn">Download .tar.gz</a>
