docs(gh-pages): Adding download instructions to GitHub pages
fixes #2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    
     <section class="page-header">
       <h1 class="project-name">Galen IDE</h1>
       <h2 class="project-tagline">IDE integration for the Galenframework</h2>
@@ -23,24 +24,27 @@
     <section class="main-content">
       <p>IDE plugins for Intellij and Eclipse with syntax highlighting which helps to create Layout Specifications</p>
 
-<h2>
-<a id="about-this-project" class="anchor" href="#about-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>About this project</h2>
+      <h2><a id="about-this-project" class="anchor" href="#about-this-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>About this project</h2>
 
-<p>Galen Framework was made with responsive design in mind. It works in a following way:</p>
+      <p>Galen Framework was made with responsive design in mind. It works in a following way:</p>
+      <p>Galen opens a page in browser Resizes browser to specified size Tests the layout with Galen Specs In case the page is not directly accessible Galen Framework allows you to perform some operations on the website first. As it is based on Selenium you are free to do whatever you need like: clicking, typing, injecting client-side javascript etc.</p>
+      <p>Galen Specs is the language with which you define how the page should look like for different devices. The language is quite advanced and allows you to express complete layout of your website with minimal text. Take a look at the following example.</p>
+      <p>In order to support the development of Galen Specs it is need to create IDE support to enable the easy creation of layout specifications</p>
 
-<p>Galen opens a page in browser Resizes browser to specified size Tests the layout with Galen Specs In case the page is not directly accessible Galen Framework allows you to perform some operations on the website first. As it is based on Selenium you are free to do whatever you need like: clicking, typing, injecting client-side javascript etc.</p>
 
-<p>Galen Specs is the language with which you define how the page should look like for different devices. The language is quite advanced and allows you to express complete layout of your website with minimal text. Take a look at the following example.</p>
+      <h2><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
-<p>In order to support the development of Galen Specs it is need to create IDE support to enable the easy creation of layout specifications</p>
-
+      <p> Nightly builds are available for:
+      <ul>
+        <li>Eclipse Plugin add this <a href="https://martinreinhardt-online.de/update_sites/galen_ide/nightly/repository/">Preview Update Site</a>.
+        <li>In IDEA add the Canary Release add the following repository manually: <i>https://plugins.jetbrains.com/plugins/canary/list</i></li>
+      </ul>
+      
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/hypery2k/galen_ide">Galen IDE</a> is maintained by <a href="https://github.com/hypery2k">hypery2k</a>.</span>
-
       </footer>
 
     </section>
-
 
   </body>
 </html>
